language/move-lang/tests/move_check/typing/mutate_non_ref.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/mutate_non_ref.move:7:10
  │
6 │         let u = 0;
  │             - Given: integer
7 │         *u = 1;
  │          ^
  │          │
  │          Invalid mutation. Expected a mutable reference
  │          Expected: '&mut _'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:10:10
   │
 9 │         let s = S { f: 0 };
   │                 ---------- Given: '0x8675309::M::S'
10 │         *s = S { f: 0 };
   │          ^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:11:10
   │
 2 │     struct S has copy, drop { f: u64 }
   │                                  --- Given: 'u64'
   ·
11 │         *s.f = 0;
   │          ^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:14:10
   │
 2 │     struct S has copy, drop { f: u64 }
   │                                  --- Given: 'u64'
   ·
14 │         *s_ref.f = 0;
   │          ^^^^^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:17:10
   │
 3 │     struct X has copy, drop { s: S }
   │                                  - Given: '0x8675309::M::S'
   ·
17 │         *x.s = S { f: 0 };
   │          ^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E05002]: type not implicitly copyable
   ┌─ tests/move_check/typing/mutate_non_ref.move:17:10
   │
 3 │     struct X has copy, drop { s: S }
   │                                  - The type '0x8675309::M::S' is not implicitly copyable. Implicit copies are limited to simple primitive values
   ·
17 │         *x.s = S { f: 0 };
   │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:18:10
   │
 2 │     struct S has copy, drop { f: u64 }
   │                                  --- Given: 'u64'
   ·
18 │         *x.s.f = 0;
   │          ^^^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:21:10
   │
 3 │     struct X has copy, drop { s: S }
   │                                  - Given: '0x8675309::M::S'
   ·
21 │         *x_ref.s = S{ f: 0 };
   │          ^^^^^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

error[E05002]: type not implicitly copyable
   ┌─ tests/move_check/typing/mutate_non_ref.move:21:10
   │
 3 │     struct X has copy, drop { s: S }
   │                                  - The type '0x8675309::M::S' is not implicitly copyable. Implicit copies are limited to simple primitive values
   ·
21 │         *x_ref.s = S{ f: 0 };
   │          ^^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/mutate_non_ref.move:22:10
   │
 2 │     struct S has copy, drop { f: u64 }
   │                                  --- Given: 'u64'
   ·
22 │         *x_ref.s.f = 0;
   │          ^^^^^^^^^
   │          │
   │          Invalid mutation. Expected a mutable reference
   │          Expected: '&mut _'

